[package]
name = "blocky"
version = "0.1.1"
authors = ["Lucas Manuel <lucas@maple.finance>"]
license = "MIT OR Apache-2.0"
description = "A tool to build section labels"
readme = "README.md"
homepage = "https://github.com/lucas-manuel/blocky"
repository = "https://github.com/lucas-manuel/blocky"
keywords = ["cli", "search", "demo"]
categories = ["command-line-utilities"]
