[package]
name = "blocky"
version = "0.1.1"
authors = ["Lucas Manuel <lucas@maple.finance>"]
license = "GNU Affero General Public License v3.0"
description = "A tool to build section labels"
readme = "README.md"
homepage = "https://github.com/lucas-manuel/blocky"
repository = "https://github.com/lucas-manuel/blocky"
keywords = ["cli", "search", "demo"]
categories = ["command-line-utilities"]
